8154838: G1CardLiveData::free_large_bitmap() uses wrong calculation to determine the number of words

Use the exact same calculation as G1CardLiveData::allocate_large_bitmap() in free_large_bitmap().

Reviewed-by: stefank, jmasa